[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "bot-v21"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
flask = "^1.1"
python = "^3.8"
command = "^0.1.0"
ranger-fm = "^1.9.3"
[tool.poetry.dev-dependencies]
